changed the path for css and js file

--- a/html/JAVA_task3.html
+++ b/html/JAVA_task3.html
@@ -104,7 +104,7 @@
       <button id="submitbtn" class="submit" type="submit" value="submit">Submit</button>
 
     </form>
-    <script src="../jquery/JAVAtask3.js"></script>
+    <script src="../js/JAVAtask3.js"></script>
     
   </body>
 </html>
