--- a/html/JAVA_task4.html
+++ b/html/JAVA_task4.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
     <title>Customer Details</title>
-    <link rel="stylesheet" href="../css/JAVA_task3.css"> 
+    <link rel="stylesheet" href="../css/JAVA_task4.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
     <script src="http://ajax.microsoft.com/ajax/jquery.validate/1.7/additional-methods.js"></script>
@@ -40,7 +40,7 @@
       <label class="postal">Postal / Zip Code</label><br><br>
 			
       <h2 class="number">Phone number: </h2>
-        <input type="text"  id="nume" name="nume"> <br><br>
+        <input type="text"  id="nume" name="phone"> <br><br>
 			
       <h2 class="email">E-mail</h2>
         <input type="email" name="email" id="email"> <br><br>
@@ -104,7 +104,34 @@
       <button id="submitbtn" class="submit" type="submit" value="submit">Submit</button>
 
     </form>
-    <script src="../js/JAVAtask3.js"></script>
+    <table id="myTable">
+      <tbody>
+      <thead>
+      <tr>
+      <th nowrap>Sl.No</th>      
+      <th nowrap>First Name</th>      
+      <th nowrap>Last name</th>
+      <th nowrap>Address 1</th>
+      <th nowrap>Address 2</th>
+      <th nowrap>City</th>
+      <th nowrap>State</th>
+      <th nowrap>Pincode</th>
+      <th nowrap>Phone number</th>
+      <th nowrap>Email</th>
+      <th nowrap>Source</th>
+      <th nowrap>Feedback</th>
+      <th nowrap>Suggestions</th>
+      <th nowrap>Gender</th>
+      </tr>
+      </thead>
+      
+      </tbody>
+    </table>
+
+
+
+    <script src="../js/JAVAtask4.js"></script>
+
     
   </body>
 </html>
