--- a/html/JAVA_task4.html
+++ b/html/JAVA_task4.html
@@ -8,8 +8,8 @@
   </head>
 
 	<body>
-    <!-- <form id="form" > -->
-      <form action="#" method="post" target="_blank">
+    <form id="form" >
+      
       <h1>Cutomer Details :</h1><br>
       
 			<h2 class="name" id="full_name">Full Name </h2>
