updated the code for display on another page

--- a/html/JAVA_task5pt2.html
+++ b/html/JAVA_task5pt2.html
@@ -9,7 +9,6 @@
 
 	<body>
     <table id="myTable">
-      <tbody>
       <thead>
       <tr>
       <th nowrap>Sl.No</th>      
@@ -28,7 +27,7 @@
       <th nowrap>Gender</th>
       </tr>
       </thead>
-      
+      <tbody id="displayarea">
       </tbody>
     </table>
 
