updated code to include the recommended column

--- a/html/JAVA_task4.html
+++ b/html/JAVA_task4.html
@@ -66,7 +66,7 @@
 			
       <div class="check">
         <legend><label>Will you be willing to recommend us? 
-          <input type="checkbox" value="yes"></label></legend> <br><br>
+          <input type="checkbox" value="yes" id = "recommend"></label></legend> <br><br>
 			</div>
 
       <div class="gender">
@@ -120,6 +120,7 @@
       <th nowrap>Phone number</th>
       <th nowrap>Email</th>
       <th nowrap>Source</th>
+      <th nowrap>recommended?</th>
       <th nowrap>Feedback</th>
       <th nowrap>Suggestions</th>
       <th nowrap>Gender</th>
