updated code to bring resultant data table on another tab + included the functionality of delete data

--- a/html/JAVA_task5pt2.html
+++ b/html/JAVA_task5pt2.html
@@ -24,7 +24,9 @@
       <th nowrap>Source</th>
       <th nowrap>Feedback</th>
       <th nowrap>Suggestions</th>
+      <th nowrap>Recommend?</th>
       <th nowrap>Gender</th>
+      <th nowrap>Delete</th>
       </tr>
       </thead>
       <tbody id="displayarea">
