updated code to include the edit functionality

--- a/html/JAVA_task5pt1.html
+++ b/html/JAVA_task5pt1.html
@@ -8,7 +8,7 @@
   </head>
 
 	<body>
-      <form action="JAVA_task5pt2.html" method="get" target="_blank">
+      <form action="JAVA_task5pt2.html" method="get" >
       
       <h1>Cutomer Details :</h1><br>
       
