--- a/html/JAVA_task5pt2.html
+++ b/html/JAVA_task5pt2.html
@@ -26,6 +26,7 @@
       <th nowrap>Suggestions</th>
       <th nowrap>Recommend?</th>
       <th nowrap>Gender</th>
+      <th nowrap>Edit</th>
       <th nowrap>Delete</th>
       </tr>
       </thead>
